tests/sema/fail/v5_fail_array_data_field.ep
# COMPILE_FAIL: unknown field i64[].data

fun main(): void {
    let xs = new i64[]
    let p = xs.data
}
